[package]
name = "minicomp"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "minicomp"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
bincode = "1.3.3"
